# diagrams-pandoc

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Main.hs  README.md  cabal.haskell-ci  cabal.project  diagrams-pandoc.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
src/: Main.hs
src/Diagrams/: Pandoc.hs
src/Text/Pandoc/: Diagrams.hs
test/: Main.hs  alt-no-caption.html  alt-no-caption.md  alt-with-caption.html  alt-with-caption.md  cleanTests.sh  codeblock.html  codeblock.out  figure-md-caption.html  figure-md-caption.md  figure-simple.html  figure-simple.md  figure.html  simple.html  simple.out  size.html  size.md  size.out  test1.md  test1.out  test2.md  test2.out  test3.out  tests.sh
