name:                diagrams-pandoc
version:             0.3.1.1
synopsis:            A Pandoc filter to express diagrams inline using the Haskell EDSL _Diagrams_
description: 'diagrams-pandoc' replaces appropriately marked code
    blocks in pandoc input with images.  The code blocks are compiled
    using the Haskell EDSL Diagrams.  Each block should define a
    Diagram named 'example', to be output.  This name and other
    defaults can be overridden by command-line arguments to the
    diagrams-pandoc program.
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          diagrams-discuss@googlegroups.com
category:            Text
build-type:          Simple
Bug-reports:         http://github.com/diagrams/diagrams-pandoc/issues
Extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10
Tested-with:         GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.5 || ==9.6.1
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-pandoc.git

library
  build-depends:       base >= 4.6 && < 4.19,
                       text >= 1.2 && < 2.1,
                       pandoc-types >= 1.20 && < 1.24,
                       diagrams-lib >= 1.3 && < 1.5,
                       linear >= 1.10 && < 1.23,
                       diagrams-builder >= 0.7 && < 0.9,
                       diagrams-cairo >= 1.3 && < 1.5,
                       directory >= 1.2 && < 1.4,
                       filepath >= 1.3 && < 1.5,
                       diagrams-svg >= 1.4 && < 1.5,
                       diagrams-core >= 1.4 && < 1.6,
                       hashable >= 1.2 && < 1.5,
                       svg-builder >= 0.1 && < 0.2
  exposed-modules: Text.Pandoc.Diagrams
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall

executable diagrams-pandoc
  main-is:             src/Main.hs
  other-extensions:    CPP
  build-depends:       base >= 4.6 && < 4.19,
                       text >= 1.2 && < 2.1,
                       pandoc-types >= 1.20 && < 1.24,
                       diagrams-lib >= 1.3 && < 1.5,
                       linear >= 1.10 && < 1.23,
                       diagrams-builder >= 0.7 && < 0.9,
                       diagrams-cairo >= 1.3 && < 1.5,
                       directory >= 1.2 && < 1.4,
                       filepath >= 1.3 && < 1.5,
                       diagrams-pandoc,
                       optparse-applicative >= 0.11 && < 0.19
  default-language:    Haskell2010
