cabal-version:       3.0
name:                diagrams-pandoc
version:             0.4
synopsis:            A Pandoc filter to express diagrams inline using the Haskell EDSL _Diagrams_
description: 'diagrams-pandoc' replaces appropriately marked code
    blocks in pandoc input with images.  The code blocks are compiled
    using the Haskell EDSL Diagrams.  Each block should define a
    Diagram named 'example', to be output.  This name and other
    defaults can be overridden by command-line arguments to the
    diagrams-pandoc program.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          diagrams-discuss@googlegroups.com
category:            Text
build-type:          Simple
Bug-reports:         http://github.com/diagrams/diagrams-pandoc/issues
Extra-source-files:  README.md, CHANGELOG.md, test/*.md, test/*.html
Tested-with:         GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.3 || ==9.8.1
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-pandoc.git

common common-deps
  build-depends:       base >= 4.6 && < 4.20,
                       text >= 1.2 && < 2.2,
                       pandoc-types >= 1.23 && < 1.24,
                       directory >= 1.2 && < 1.4,
                       filepath >= 1.3 && < 1.5

library
  import:              common-deps
  build-depends:       diagrams-lib >= 1.3 && < 1.5,
                       linear >= 1.10 && < 1.23,
                       diagrams-builder >= 0.7 && < 0.9,
                       diagrams-cairo >= 1.3 && < 1.5,
                       diagrams-svg >= 1.4 && < 1.5,
                       diagrams-core >= 1.4 && < 1.6,
                       hashable >= 1.2 && < 1.5,
                       svg-builder >= 0.1 && < 0.2,
                       pandoc >= 3.0 && < 3.2
  exposed-modules: Text.Pandoc.Diagrams
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall

test-suite test
  import:              common-deps
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       diagrams-pandoc,
                       bytestring >= 0.10.10 && < 0.13,
                       pandoc >= 3.0 && < 3.2,
                       tasty >= 1.4.3 && < 1.6,
                       tasty-golden >= 2.3.5 && < 2.4,

                       -- sandbox dependencies
                       SVGFonts >= 1.8.0 && < 1.9


executable diagrams-pandoc
  import:              common-deps
  main-is:             src/Main.hs
  other-extensions:    CPP
  build-depends:       diagrams-lib >= 1.3 && < 1.5,
                       linear >= 1.10 && < 1.23,
                       diagrams-builder >= 0.7 && < 0.9,
                       diagrams-cairo >= 1.3 && < 1.5,
                       diagrams-pandoc,
                       optparse-applicative >= 0.11 && < 0.19
  default-language:    Haskell2010
